Fixing header fixed position Adding new list for links to types of moves. Restyling the layout of the general app with fixed header and footer and proportional characters and move list. Custom scrollbars.

--- a/style.css
+++ b/style.css
@@ -1,81 +1,104 @@
 /* TODO
-* Better font
 * Better colors
-* Stylized scrollbars
 */
 
-/* header {
+:root {
+    font-family: 'Open Sans', sans-serif;
+}
+
+header {
     position: fixed;
     width: 100%;
+    background-color: chartreuse;
     top: 0;
     left: 0;
-} */
+    /* padding: 0;
+    margin: 0; */
+}
 
 body {
     background-color: #ea8e45;
 }
 
-@media (max-width: 500px) {
-    section.panel {
-        width: 200px;
-        height: 750px;
-        overflow-y: scroll;
-    }
+main {
+    /* position: relative; */
+    top: 90px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-color: red;
+}
 
-    .char-thumbnail {
-        width: 159px; /*106px;*/
-        height: 158px; /*105px;*/
-        border: 10px solid;
-        color: #ab5042;
-    }
-    
-    .separator {
-        border-left: 6px solid black;
-        margin-left: 20px;
-        margin-right: 20px;
-        height: 750px;
-    }
-    
-    #movelist {
-        width: 750px;
-    }
+/* #settings {
+    position: fixed;
+} */
+
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: chartreuse;
+}
+
+@media (max-width: 500px) {
 }
 
 @media (min-width: 500px) {
-    section.panel {
-        width: 200px;
-        height: 750px;
+    .menu {
+        width: 100%;
+        height: 63vh;
         overflow-y: scroll;
     }
 
     .char-thumbnail {
         width: 159px; /*106px;*/
         height: 158px; /*105px;*/
-        border: 10px solid;
+        border: 15px solid;
         color: #ab5042;
     }
     
     .separator {
-        border-left: 6px solid black;
+        /* border-left: 6px solid black; */
         margin-left: 20px;
         margin-right: 20px;
-        height: 750px;
-    }
-    
-    #characters {
-        width: 250px;
+        /* height: 100%; */
     }
 
     #movelist {
-        width: 700px;
+        /* width: 100%; */
+    }
+
+    #characterMenu {
+        /* width: 250px; */
+        width: 35vh;
+        height: 67.5vh;
+        background-color: darkgoldenrod;
+        display: flex;
+        justify-content: center;
+    }
+
+    #movelistMenu {
+        width: 60vh;
+        background-color: chocolate;
+    }
+
+    ul {
+        display: flex;
+        list-style: none;
+    }
+
+    li {
+        margin: 0px 10px;
+        /* color: white; */
     }
 }
 
-
 .bottom-left {
     position: absolute;
-    bottom: -3px;
-    left: 30px;
+    bottom: 5px;
+    left: 40px;
     color: white;
     background-color: rgba(0, 0, 0, 0.75);
     white-space: nowrap;
@@ -105,4 +128,24 @@ input[type="radio"] {
 
 input[type="radio"]:checked + img{
     color: green;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #181717;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: plum;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: gold;
 }
